--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ buildNumber.properties
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# Ignore .iml file since this is a Maven project
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839-How-to-manage-projects-under-Version-Control-Systems
+# "You may consider [ignoring] .iml files for Gradle or Maven projects, since these files will be generated on import"
+*.iml
+
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
