--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.sparkjava</groupId>
-            <artifactId>spark-core</artifactId>
-            <version>2.6.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
             <version>1.0.4</version>
@@ -64,7 +59,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>edu.tu_berlin.ise.opendata.blume.API</mainClass>
+                                    <mainClass>edu.tu_berlin.ise.opendata.blume.DailyImporter</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
